# git-annex-uploader

./: CMakeLists.txt  FileStatusStore.cpp  FileStatusStore.h  GitAnnex.cpp  GitAnnex.h  NOTICE  README.md  main.cpp
